@@ -2,6 +2,8 @@ Revision history for Perl extension AnyEvent.
 
 4.14
         - Fixed a bug in DNS SRV priority sorting.
+        - AnyEvent::Util::guard now reports runtime errors while
+          executing the guard block as warnings.
 
 4.13 Thu Jun  5 00:47:59 CEST 2008
 	- AnyEvent::DNS only followed cname chains with length 2,
